--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
 	font-family: 'Josefin Sans', sans-serif;
 	box-sizing: border-box;
 }
+
+html, body {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+}
+
 .hero{
 	height: 100vh;
 	width: 100%;
