--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ nav{
 	padding-right: 8%;
 }
 .logo{
-	color: white;
+	color: #511586;
 	font-size: 35px;
 	letter-spacing: 1px;
 	cursor: pointer;
